feat(challenge): 챌린지 모델에 award 필드 추가
